gestion des requetes avec frequences, manque ordre de gestion des conditions

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,10 @@
-/Dico/
+/DataParser/
+/Dictionary/
 /Index/
 /Query/
 /Requester/
-/Dictionary/
-/DataParser/
+/dataParser/
+/dictionary/
+/index/
+/query/
+/requester/
